# MailMaster

./: .env.sample  pyproject.toml  readme.md
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_image.py  0003_blogpost_created_at_blogpost_likes_count_and_more.py  0004_alter_blogpost_published_sign.py  0005_alter_blogpost_published_sign.py  0006_remove_blogpost_likes_count.py  0007_alter_blogpost_created_at.py  0008_alter_blogpost_image_alter_blogpost_published_sign.py
config/: settings.py  urls.py
fixtures/: auth_data.json  blog_data.json  newsletterapp_data.json  recepients_data.json  users_data.json
media/blog_image/: images.jfif
newsletterapp/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
newsletterapp/migrations/: 0001_initial.py  0002_newsletter_created_at.py  0003_newslettersettings.py  0004_remove_newslettersettings_start_datetime_and_more.py  0005_alter_newslettersettings_periodicity_and_more.py  0006_newslettersettings_send_time.py  0007_newslettersettings_next_send_day_and_more.py  0008_remove_newslettersettings_start_date_and_more.py  0009_newsletterlogs.py  0010_alter_newsletterlogs_newsletter_and_more.py  0011_newsletterlogs_send_method_and_more.py  0012_newsletter_user.py  0013_alter_newsletter_user.py  0014_alter_newsletter_user.py
newsletterapp/templates/: base.html  error_message.html
recepients/: admin.py  forms.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+40 files in other folders)
