[tool.poetry]
name = "mailmaster"
version = "0.1.0"
description = ""
authors = ["dimapb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
django = "^5.1"
django-apscheduler = "^0.6.2"
pillow = "^10.4.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
